# unofficial-perplexity-mcp

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
scripts/: check_versions.py
skills/deep-researching/: SKILL.md
skills/pplx-researching/: SKILL.md
src/perplexity_unofficial_mcp/: cli.py  config.py  jsonrpc.py  logging.py  mcp_stdio.py  perplexity_adapter.py  tools.py
tests/: test_config.py  test_follow_up_backend_uuid.py  test_jsonrpc.py  test_mode_model.py  test_stdio_integration.py  test_tools.py
